// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test /api/top-langs contract > should match the private missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the private non-whitelisted username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public blacklisted-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is blacklisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public happy-path response snapshot 1`] = `
{
  "content": "<svg width="300" height="165" viewBox="0 0 300 165" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .bold { font-weight: 700 }
    .lang-name {
      font: 400 11px "Segoe UI", Ubuntu, Sans-Serif;
      fill: #434d58;
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="4.5" height="99%" stroke="#e4e2e2" width="299" fill="#fffefe" stroke-opacity="1"/>

        
      <g data-testid="card-title" transform="translate(25, 35)">
        <g transform="translate(0, 0)">
      <text x="0" y="0" class="header" data-testid="header">Most Used Languages</text>
    </g>
      </g>
    

        <g data-testid="main-card-body" transform="translate(0, 55)">
          
    <svg data-testid="lang-items" x="25">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">HTML</text>
      <text x="215" y="34" class="lang-name">55.56%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="55.55555555555556%">
        <rect height="8" fill="#0f0" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 40)">
    <g class="stagger" style="animation-delay: 600ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">javascript</text>
      <text x="215" y="34" class="lang-name">44.44%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="44.44444444444444%">
        <rect height="8" fill="#0ff" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;"/>
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should render error card in same theme as requested card 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#0a0f0b" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #abd200 }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #68b587 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#0a0f0b" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;
